// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatExercisePrompt should generate prompt with complete exercise data 1`] = `
"あなたは筋力トレーニングの専門家です。音声入力から得られたトレーニング記録を、正確で一貫性のある形式に整理してください。

音声入力: "ベンチプレス100キロを10回3セット右側で実施"

現在の解析結果:
- 種目: ベンチプレス
- 重量: 100kg
- 回数: 10回
- セット数: 3セット
- 部位: 右

以下の形式で整理された記録を返してください:

種目: [正式な種目名]
重量: [数値]kg
回数: [数値]回
セット数: [数値]セット
部位: [左/右/両方/不明]

注意事項:
- 種目名は一般的な筋トレ用語を使用
- 数値は明確でない場合は「不明」
- 部位は「左」「右」「両方」「不明」のいずれか
- 一貫性を保ち、簡潔に記述"
`;

exports[`formatExercisePrompt should generate prompt with partial exercise data 1`] = `
"あなたは筋力トレーニングの専門家です。音声入力から得られたトレーニング記録を、正確で一貫性のある形式に整理してください。

音声入力: "スクワットを何回かやった"

現在の解析結果:
- 種目: スクワット
- 重量: 不明
- 回数: 不明
- セット数: 不明
- 部位: 不明

以下の形式で整理された記録を返してください:

種目: [正式な種目名]
重量: [数値]kg
回数: [数値]回
セット数: [数値]セット
部位: [左/右/両方/不明]

注意事項:
- 種目名は一般的な筋トレ用語を使用
- 数値は明確でない場合は「不明」
- 部位は「左」「右」「両方」「不明」のいずれか
- 一貫性を保ち、簡潔に記述"
`;

exports[`formatExercisePrompt should generate prompt with unknown exercise 1`] = `
"あなたは筋力トレーニングの専門家です。音声入力から得られたトレーニング記録を、正確で一貫性のある形式に整理してください。

音声入力: "今日のトレーニングは良かった"

現在の解析結果:
- 種目: 不明
- 重量: 不明
- 回数: 不明
- セット数: 不明
- 部位: 不明

以下の形式で整理された記録を返してください:

種目: [正式な種目名]
重量: [数値]kg
回数: [数値]回
セット数: [数値]セット
部位: [左/右/両方/不明]

注意事項:
- 種目名は一般的な筋トレ用語を使用
- 数値は明確でない場合は「不明」
- 部位は「左」「右」「両方」「不明」のいずれか
- 一貫性を保ち、簡潔に記述"
`;
